<?xml version="1.0"?>
<package>
    <name>laneFollower</name>
    <version>0.0.1</version>
    <description>The package for the lane following function</description>
    <maintainer email="Chude.Qian@case.edu">Frank Qian</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/frank-qcd-qk</url>
    <author email="Chude.Qian@case.edu">Frank Qian</author>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <export></export>
</package>
